--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 Flask==2.2.2
+google-generativeai==0.4.0
+gunicorn==21.2.0
 google-cloud-storage==2.8.0
-google-cloud-language==2.0.1
-google-cloud-speech==2.17.0
-google-cloud==3.0.3
-google-generativeai
