--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.2
+Flask==2.2.5
 google-generativeai==0.4.0
 gunicorn==21.2.0
 google-cloud-storage==2.8.0
-Werkzeug==2.0.3  # Compatible version
+Werkzeug==2.2.3  # Compatible version for Flask 2.2.x
